@@ -11,4 +11,8 @@ Gem::Specification.new do |s|
     "This library implements test/unit compatible API on minitest. " +
     "The test/unit means that test/unit which was bundled with Ruby 1.8."
   s.executables = ["testrb"]
+
+  # Ruby bundled test/unit is a compatibility layer for minitest,
+  # and it doesn't have support for minitest 5.
+  s.add_runtime_dependency "minitest", '< 5.0.0'
 end
